Made mobile hero

--- a/index.html
+++ b/index.html
@@ -10,60 +10,27 @@
 </head>
 
 <body>
-	<header class="header-container">
-		<section class="header">
-			<!-- The header will be here regardless -->
-			<h1 class="header-title">Vocast Fitness</h1>
-
-			<!-- Nav only shows in desktop -->
-			<nav class="nav">
-				<a href="">Home</a>
-				<a href="">Services</a>
-				<a href="">News</a>
-			</nav>
-
-			<!-- Menu Icon only in mobile view -->
-			<div class="hamburger-icon-container">
-				<img class="hamburger-icon" src="img/1024px-Hamburger_icon_white.svg.png" height="50" alt="">
+	<header>
+		<div class="nav">
+			<h1 class="logo">VOCAST FITNESS</h1>
+			<img src="img/1024px-Hamburger_icon_white.svg.png" width="50" class="hamburger-menu">
+		</div>
+		<div class="hero">
+			<div class="hero-left-section">
+				<h2 class="hero-text">GET BIG <br> OR <br> GET OUT</h2>
+				<button class="btn btn-primary">JOIN THE GRIND</button>
 			</div>
-
-			<!-- JOIN THE GRIND button only shows in desktop-->
-			<div class="header-btn-container">
-				<button class="btn">JOIN THE GRIND</button>
+			<div class="hero-subtitle">
+				<p>
+					OPEN 24/7
+					<br>
+					ALL YEAR
+				</p>
 			</div>
-		</section>
-
-		<section class="hero-container">
-			<div class="hero">
-				<div class="hero-left-section">
-					<h1 class="hero-title">Work<br>out <br> with us</h1>
-					<div class="btn-container">
-						<button class="btn btn-primary">JOIN THE GRIND</button>
-					</div>
-				</div>
-			</div>
-			<div class="hero-img">
-			</div>
-		</section>
+			<img src="img/phone.png" class="hero-img">
+			<img src="img/desktop.jpg" class="hero-img-desktop">
+		</div>
 	</header>
-
-	<main class="main-container">
-		<section class="services-section">
-			<h1>Our Services</h1>
-			<div>
-				<img src="" alt="">
-				<h3></h3>
-			</div>
-			<div>
-				<img src="" alt="">
-				<h3></h3>
-			</div>
-		</section>
-	</main>
-
-	<footer>
-
-	</footer>
 </body>
 
 </html>
