Finished header section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 		<div class="nav">
 			<h1 class="logo">VOCAST FITNESS</h1>
 			<img src="img/1024px-Hamburger_icon_white.svg.png" width="50" class="hamburger-menu">
+			<nav class="nav-links">
+				<a href="">Home</a>
+				<a href="">Services</a>
+				<a href="">News</a>
+			</nav>
+			<button class="btn nav-btn">JOIN THE GRIND</button>
 		</div>
 		<div class="hero">
 			<div class="hero-left-section">
-				<h2 class="hero-text">GET BIG <br> OR <br> GET OUT</h2>
+				<h2 class="hero-text">GET <strong class="big">BIG</strong> <br> OR <br> GET OUT</h2>
 				<button class="btn btn-primary">JOIN THE GRIND</button>
 			</div>
 			<div class="hero-subtitle">
@@ -28,9 +34,14 @@
 				</p>
 			</div>
 			<img src="img/phone.png" class="hero-img">
-			<img src="img/desktop.jpg" class="hero-img-desktop">
 		</div>
+		<img src="img/desktop-img.png" class="hero-img-desktop">
 	</header>
+	<main>
+		<section>
+			<h2>Text</h2>
+		</section>
+	</main>
 </body>
 
 </html>
