Main section og footer done. Husk activity slideshow (jeg har sat en height i css) og contact :D

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/index.css">
 	<title>Document</title>
+	<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>	
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 				<button class="btn btn-primary">JOIN THE GRIND</button>
 			</div>
 			<div class="hero-subtitle">
-				<p>
+				<p class="open-247">
 					OPEN 24/7
 					<br>
 					ALL YEAR
@@ -38,10 +39,77 @@
 		<img src="img/desktop-img.png" class="hero-img-desktop">
 	</header>
 	<main>
-		<section>
-			<h2>Text</h2>
+		<section class="icon-section">
+			<h2 class="icon-title">BEGIN YOUR GRIND NOW! </h2>
+			<div class="icons">
+				<div>
+					<i class="fas fa-dumbbell fa-6x"></i>
+					<p class="under-title">EVENTS AND COMPETITIONS</p>
+				</div>
+				<div>
+					<i class="fas fa-calendar-week fa-6x"></i>
+					<p class="under-title">JOIN BOXING AND OTHER ACTIVITIES</p>
+				</div>
+				<div>
+					<i class="fas fa-money-check-alt fa-6x"></i>
+					<p class="under-title">AFFORDABLE MEMBERSHIPS</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="second-section">
+
+				<p class="title-second-section title-second-section-first">ACTIVITIES</p>
+				<div class="slideshow">
+					Daniel, værsgod :D
+				</div>
+				
+				<p class="title-second-section">NEWS</p>
+				<div class="news-section">
+					<div class="news news-first">
+						<img src="img/boxing-bag.jpg" width="100%">
+						<div class="container-news">
+							<h4>NEW GYM BAGS WILL BE COMING SOON!</h4>
+							<p>Some text here that will be descriping some of the news about the grand opening of this legandary gym</p>
+						</div>
+					</div>
+					<div class="news news-second">
+						<img src="img/dumbbels.jfif" width="100%">
+						<div class="container-news">
+							<h4>EVEN HEAVIER DUMBBELS AVAILABLE NOW!</h4>
+							<p>Some text here that will be descriping some of the news about the grand opening of this legandary gym</p>
+						</div>
+					</div>
+				</div>	
 		</section>
 	</main>
+
+	<section class="third-section">
+		<p class="third-section-title">ARE YOU READY?</p>
+			<div>
+				<div class="map-text">
+					<p>Vocast Fitness</p>
+					<p>We are located at Lyskær 2, 2730 Herlev</p>
+					<div><button class="btn btn-maps">GET IN THERE</button></div>	
+				</div>
+				<div class="map-responsive">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2247.4621659220857!2d12.432821551504103!3d55.715719980447965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652505320f39191%3A0x375abc8cadf60d27!2sLysk%C3%A6r%202%2C%202730%20Herlev!5e0!3m2!1sda!2sdk!4v1633429699233!5m2!1sda!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				</div>
+			</div>
+			
+	
+	</section>
+
+	<footer>
+		<div>
+			<h2 >CONTACT US</h2>
+		</div>
+	</footer>
+
+	<div class="copyright">
+		<p>2019-2021 ©Vocast. All Rights Reserved</p>
+	</div>
+
 </body>
 
 </html>
